kubernetes/overlays/ebl/ingress-ebc-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebc-web-ingress
  namespace: ebl
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  tls:
  - hosts:
    - ecletica.beer
    - www.ecletica.beer
    secretName: ebl-web-tls
  rules:
  - host: ecletica.beer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ebc-web
            port:
              number: 80
  - host: www.ecletica.beer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ebc-web
            port:
              number: 80
